--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "Laser Space : Machine Learning : Tone Analysis",
   "main": "index.js",
   "scripts": {
+    "server": "babel-watch server.js",
     "test": "./node_modules/babel-cli/bin/babel-node.js ./node_modules/karma/bin/karma start ./karma.conf",
     "test:dev": "npm run test -- --watch",
     "start": "NODE_ENV=development webpack-dev-server",
@@ -33,23 +34,6 @@
     "express": "4.14.0"
   },
   "devDependencies": {
-    "classnames": "2.2.5",
-    "draft-js": "0.8.0",
-    "history": "^2.0.0",
-    "immutable": "^3.8.1",
-    "intl": "^1.2.4",
-    "isomorphic-fetch": "^2.2.1",
-    "normalizr": "2.2.1",
-    "object-assign": "4.1.0",
-    "react": "^15.2.1",
-    "react-intl": "^2.1.3",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.6.0",
-    "react-router-redux": "^4.0.5",
-    "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.3",
-    "underscore": "1.8.3",
     "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
@@ -60,19 +44,26 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "6.11.6",
+    "babel-watch": "^2.0.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "chai-enzyme": "^0.5.0",
     "chalk": "^1.1.3",
     "cheerio": "^0.20.0",
+    "classnames": "2.2.5",
     "css-loader": "^0.23.1",
     "debug": "^2.2.0",
+    "draft-js": "0.8.0",
     "enzyme": "^2.4.1",
     "extract-text-webpack-plugin": "1.0.1",
     "fetch-mock": "5.1.1",
     "file-loader": "^0.9.0",
     "flow-bin": "^0.29.0",
+    "history": "^2.0.0",
+    "immutable": "^3.8.1",
     "imports-loader": "^0.6.5",
+    "intl": "^1.2.4",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "karma": "^1.1.1",
     "karma-chrome-launcher": "^1.0.1",
@@ -85,10 +76,18 @@
     "madoka": "1.1.2",
     "mocha": "2.5.3",
     "node-sass": "^3.8.0",
+    "normalizr": "2.2.1",
+    "object-assign": "4.1.0",
     "phantomjs-prebuilt": "^2.1.7",
+    "react": "^15.2.1",
     "react-addons-test-utils": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-intl": "^2.1.3",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.0",
+    "react-router-redux": "^4.0.5",
     "react-tools": "^0.10.0",
+    "redux": "^3.5.2",
     "redux-devtools": "^3.3.1",
     "redux-devtools-diff-monitor": "^5.0.5",
     "redux-devtools-dock-monitor": "^1.1.1",
@@ -97,12 +96,16 @@
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^2.6.1",
     "redux-slider-monitor": "^1.0.7",
+    "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.3",
     "sass-loader": "^4.0.0",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "suppose": "^0.6.1",
+    "underscore": "1.8.3",
     "url-loader": "^0.5.7",
+    "watson-developer-cloud": "^2.2.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "yargs": "^4.8.1",
